--- a/View/AdaugareOm.xaml
+++ b/View/AdaugareOm.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Modern.View.AdaugareAdmin"
+﻿<Window x:Class="Modern.View.AdaugareOm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Modern.View"
-        mc:Ignorable="d"
-        Title="AdaugareAdmin" Height="450" Width="300"
+                mc:Ignorable="d"
+        Title="AdaugareOm" Height="300" Width="500"
         ResizeMode="NoResize"
 WindowStartupLocation="CenterScreen"
         Background="Transparent"
@@ -26,12 +26,12 @@ AllowsTransparency="True">
                            FontSize="20"
                            FontWeight="Bold"
                            Foreground="#D8A25E">
-                    ANTRENOR NOU
+                    Client Nou
                 </TextBlock>
 
                 <TextBlock
-                    Margin="0,120,0,0"
-                    Foreground="#D8A25E">username:
+                    Margin="0,30,0,0"
+                    Foreground="#D8A25E">Nume:
                 </TextBlock>
 
                 <TextBox x:Name="txtUser"
@@ -56,35 +56,7 @@ AllowsTransparency="True">
 
                 </TextBox>
 
-                <TextBlock Text="Password:"
-Foreground="#D8A25E"
-TextWrapping="Wrap"
-TextAlignment="Left"
-Margin="0,15,0,0"/>
-
-                <PasswordBox x:Name="txtPasw"
-                 
-                  FontFamily="Georgia"
-                  BorderBrush="#D8A25E"
-                  BorderThickness="0,0,0,1"
-                  Height="28"
-                  VerticalContentAlignment="Center"
-                  PasswordChanged="PasswordBox_PasswordChanged"
-                  Margin="0,5,0,0"
-                  Foreground="#A04747"
-                  CaretBrush="#A04747"
-                  Padding="25,0,0,0"
-                                 
-                            >
-
-                    <PasswordBox.Background>
-                        <ImageBrush ImageSource="/imagini/lacat.png"
-                             AlignmentX="Left"
-                             Stretch="Uniform"
-                                        />
-                    </PasswordBox.Background>
-
-                </PasswordBox>
+                
 
                 <Button 
 x:Name="btnLogin"
@@ -96,7 +68,7 @@ FontSize="20"
 Cursor="Hand"
 
 FontFamily="Georgia"
-Command="{Binding AdgAdmin}"
+Command="{Binding AdgOm}"
 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
 >
 
@@ -239,4 +211,6 @@ Cursor="Hand"
 
         </Grid>
     </Border>
+
+
 </Window>
