--- a/View/AdaugareOm.xaml
+++ b/View/AdaugareOm.xaml
@@ -12,8 +12,8 @@ WindowStartupLocation="CenterScreen"
         WindowStyle="None"
 AllowsTransparency="True">
 
-    <Border Background="#343131"
-            BorderBrush="#D8A25E"
+    <Border Background="{Binding Gri}"
+            BorderBrush="{Binding Galben}"
  BorderThickness="3"
             CornerRadius="22">
         <Grid>
@@ -25,25 +25,25 @@ AllowsTransparency="True">
                            VerticalAlignment="Center"
                            FontSize="20"
                            FontWeight="Bold"
-                           Foreground="#D8A25E">
+                           Foreground="{Binding Galben}">
                     Client Nou
                 </TextBlock>
 
                 <TextBlock
                     Margin="0,30,0,0"
-                    Foreground="#D8A25E">Nume:
+                    Foreground="{Binding Galben}">Nume:
                 </TextBlock>
 
                 <TextBox x:Name="txtUser"
         
          FontFamily="Georgia"
-         BorderBrush="#D8A25E"
+         BorderBrush="{Binding Galben}"
          BorderThickness="0,0,0,1"
          Height="28"
          VerticalContentAlignment="Center"
          Margin="0,5,0,0"
-         Foreground="#A04747"
-         CaretBrush="#A04747"
+         Foreground="{Binding Rosu}"
+         CaretBrush="{Binding Rosu}"
          Padding="25,0,0,0"
          
                          Text="{Binding Username}">
@@ -63,7 +63,7 @@ x:Name="btnLogin"
 Margin="0,50,0,0"
 BorderThickness="0"
 Content="Adauga"
-Foreground="#343131"
+Foreground="{Binding Gri}"
 FontSize="20"
 Cursor="Hand"
 
@@ -72,67 +72,12 @@ Command="{Binding AdgOm}"
 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
 >
 
-                    <Button.Resources>
-                        <SolidColorBrush x:Key="ButtonBackgroundBrush" Color="#D8A25E"/>
-                    </Button.Resources>
-
-                    <Button.Style>
-                        <Style TargetType="Button">
-                            <Setter Property="Background" Value="{StaticResource ButtonBackgroundBrush}"/>
-                            <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
-                            <Setter Property="RenderTransform">
-                                <Setter.Value>
-                                    <ScaleTransform ScaleX="1" ScaleY="1"/>
-                                </Setter.Value>
-                            </Setter>
-
-                            <Style.Triggers>
-
-                                <EventTrigger RoutedEvent="MouseEnter">
-                                    <BeginStoryboard>
-                                        <Storyboard>
-
-                                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(ScaleTransform.ScaleX)"
-                                     To="1.1" Duration="0:0:0.2"/>
-                                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(ScaleTransform.ScaleY)"
-                                     To="1.1" Duration="0:0:0.2"/>
-
-
-                                            <ColorAnimation 
-                                    Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                    To="#854836"
-                                    Duration="0:0:0.2"/>
-                                        </Storyboard>
-                                    </BeginStoryboard>
-                                </EventTrigger>
-
-
-                                <EventTrigger RoutedEvent="MouseLeave">
-                                    <BeginStoryboard>
-                                        <Storyboard>
-
-                                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(ScaleTransform.ScaleX)"
-                                     To="1" Duration="0:0:0.2"/>
-                                            <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(ScaleTransform.ScaleY)"
-                                     To="1" Duration="0:0:0.2"/>
-
-
-                                            <ColorAnimation 
-                                    Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                    To="#D8A25E"
-                                    Duration="0:0:0.2"/>
-                                        </Storyboard>
-                                    </BeginStoryboard>
-                                </EventTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Style>
-
+                    
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Border Height="40" Width="150"
             CornerRadius="9"
-            Background="{TemplateBinding Background}">
+            Background="{Binding Galben}">
                                 <ContentPresenter VerticalAlignment="Center"
                           HorizontalAlignment="Center"/>
                             </Border>
@@ -144,60 +89,18 @@ CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
                     Margin="0,20,0,0"
                     BorderThickness="0"
                     Content="Anulare"
-Foreground="#343131"
+Foreground="{Binding Gri}"
 FontSize="20"
 Cursor="Hand"
                     Click="Anulare">
 
-                    <Button.Style>
-                        <Style TargetType="Button">
-                            <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
-                            <Setter Property="RenderTransform">
-                                <Setter.Value>
-                                    <ScaleTransform ScaleX="1" ScaleY="1" />
-                                </Setter.Value>
-                            </Setter>
-                            <Setter Property="Background">
-                                <Setter.Value>
-                                    <SolidColorBrush Color="#A04747" />
-                                </Setter.Value>
-                            </Setter>
-                            <Style.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Trigger.EnterActions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(ScaleTransform.ScaleX)"
-                                                 To="1.1" Duration="0:0:0.2" />
-                                                <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(ScaleTransform.ScaleY)"
-                                                 To="1.1" Duration="0:0:0.2" />
-                                                <ColorAnimation Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
-                                                To="#854836" Duration="0:0:0.2" />
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </Trigger.EnterActions>
-                                    <Trigger.ExitActions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(ScaleTransform.ScaleX)"
-                                                 To="1" Duration="0:0:0.2" />
-                                                <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(ScaleTransform.ScaleY)"
-                                                 To="1" Duration="0:0:0.2" />
-                                                <ColorAnimation Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
-                                                To="#A04747" Duration="0:0:0.2" />
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </Trigger.ExitActions>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Style>
+                    
 
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Border Height="35" Width="120"
                     CornerRadius="9"
-                    Background="{TemplateBinding Background}">
+                    Background="{Binding Rosu}">
                                 <ContentPresenter VerticalAlignment="Center"
                                   HorizontalAlignment="Center"/>
                             </Border>
