--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -120,7 +120,7 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <ListView Background="{Binding Gri}" BorderThickness="0" ItemsSource="{Binding Oameni}">
+                <ListView Background="{Binding Gri}" BorderThickness="0"  ItemsSource="{Binding Oameni}">
                     <ListView.Resources>
                         <Style TargetType="{x:Type ScrollBar}">
                             <Setter Property="Template">
@@ -174,6 +174,7 @@
                                         <ColumnDefinition Width="auto"/>
                                         <ColumnDefinition Width="auto"/>
                                         <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="auto"/>
                                     </Grid.ColumnDefinitions>
 
                                     <Ellipse Width="10" Height="10" Fill="{Binding expirat}" Grid.Column="0"/>
@@ -194,7 +195,7 @@
                                         </Button.Template>
                                     </Button>
 
-                                    <Button Grid.Column="4" Padding="0,0,30,0" Margin="10,0,10,0" Command="{Binding RenoireAbonament}">
+                                    <Button Grid.Column="4" Padding="0,0,1,0" Margin="10,0,10,0" Command="{Binding RenoireAbonament}">
                                         <Button.Template>
                                             <ControlTemplate TargetType="Button">
                                                 <Border Background="{Binding Negru}" CornerRadius="10" Padding="1" Width="50" RenderOptions.BitmapScalingMode="HighQuality">
@@ -207,6 +208,21 @@
                                             </ControlTemplate>
                                         </Button.Template>
                                     </Button>
+
+                                    <Button Grid.Column="5" Padding="0,0,1,0" Margin="1,0,10,0" Command="{Binding DeschidereDetaliSportiv}">
+                                        <Button.Template>
+                                            <ControlTemplate TargetType="Button">
+                                                <Border Background="{Binding Negru}" CornerRadius="10" Padding="1" Width="50" RenderOptions.BitmapScalingMode="HighQuality">
+                                                    <Border>
+                                                        <Border.Background>
+                                                            <ImageBrush ImageSource="/imagini/informatikickboxer.png" Stretch="UniformToFill"/>
+                                                        </Border.Background>
+                                                    </Border>
+                                                </Border>
+                                            </ControlTemplate>
+                                        </Button.Template>
+                                    </Button>
+
                                 </Grid>
                             </Border>
                         </DataTemplate>
